apps/docs/src/css/custom.css
/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @format
 */

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --aa-text-color-rgb: 38, 38, 39;
  --aa-input-background-color-rgb: 255, 255, 255;
  --aa-input-border-color-rgb: 128, 126, 163;
  --aa-muted-color-rgb: 128, 126, 163;
  --aa-primary-color-rgb: 62, 52, 211;
  /*
   // light mode
   // dark mode

   // light mode
   // dark mode??

   // light mode
   // dark mode


   // light mode
   // dark mode

  --aa-text-color-rgb: // already set.

  --key-shadow:
  --key-gradient:

  */

  --ifm-color-primary: hsl(295, 62%, 35%);
  --ifm-color-primary-dark: hsl(295, 62%, 32%);
  --ifm-color-primary-darker: hsl(295, 62%, 30%);
  --ifm-color-primary-darkest: hsl(295, 62%, 25%);
  --ifm-color-primary-light: hsl(295, 60%, 39%);
  --ifm-color-primary-lighter: hsl(295, 62%, 40%);
  --ifm-color-primary-lightest: hsl(295, 60%, 46%);
  --ifm-code-font-size: 95%;
  --ifm-footer-logo-max-width: min(20rem, 90vw);

  --bg1: hsl(276, 17%, 96%);
  --bg1-alpha50: hsla(276, 17%, 96%, 0.5);
  --bg1-alpha75: hsla(276, 17%, 96%, 0.75);
  --bg2: hsl(0, 0%, 100%);
  --code-bg: hsl(276, 17%, 96%);

  --fg1: hsl(0, 0%, 0%);
  --fg2: hsl(0, 0%, 40%);

  --link: hsla(202, 100%, 50%, 1);

  --cyan: hsla(202, 100%, 50%, 1);
  --cyan-h: 202;
  --cyan-s: 100%;
  --cyan-l: 50%;
  --pink: hsla(295, 62%, 60%, 1);
  --pink-h: 295;
  --pink-s: 62%;
  --pink-l: 60%;

  --ifm-alert-border-color: hsla(202, 100%, 50%, 1);
  --ifm-alert-background-color: hsla(202, 100%, 50%, 1);

  --ifm-navbar-background-color: var(--bg2);
  --ifm-footer-background-color: var(--bg1);
  --ifm-heading-font-family: 'Avenir Next', system-ui, -apple-system, 'Segoe UI',
    Roboto, Ubuntu, Cantarell, 'Noto Sans', sans-serif, BlinkMacSystemFont,
    'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
    'Segoe UI Emoji', 'Segoe UI Symbol';

  /* cache-breaker */
  --hash: 1;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
html[data-theme='dark']:root {
  --aa-text-color-rgb: 183, 192, 199;
  --aa-input-background-color-rgb: 0, 3, 9;
  --aa-input-border-color-rgb: 128, 126, 163;
  --aa-muted-color-rgb: 146, 138, 255;
  --aa-primary-color-rgb: 146, 138, 255;

  --ifm-color-scheme: dark;
  --ifm-color-emphasis-0: var(--ifm-color-gray-1000);
  --ifm-color-emphasis-100: var(--ifm-color-gray-900);
  --ifm-color-emphasis-200: var(--ifm-color-gray-800);
  --ifm-color-emphasis-300: var(--ifm-color-gray-700);
  --ifm-color-emphasis-400: var(--ifm-color-gray-600);
  --ifm-color-emphasis-600: var(--ifm-color-gray-400);
  --ifm-color-emphasis-700: var(--ifm-color-gray-300);
  --ifm-color-emphasis-800: var(--ifm-color-gray-200);
  --ifm-color-emphasis-900: var(--ifm-color-gray-100);
  --ifm-color-emphasis-1000: var(--ifm-color-gray-0);
  --ifm-background-color: #1b1b1d;
  --ifm-background-surface-color: #242526;
  --ifm-hover-overlay: hsla(0, 0%, 100%, 0.05);
  --ifm-color-content: #e3e3e3;
  --ifm-color-content-secondary: #fff;
  --ifm-breadcrumb-separator-filter: invert(64%) sepia(11%) saturate(0%)
    hue-rotate(149deg) brightness(99%) contrast(95%);
  --ifm-code-background: hsla(0, 0%, 100%, 0.1);
  --ifm-scrollbar-track-background-color: #444;
  --ifm-scrollbar-thumb-background-color: #686868;
  --ifm-scrollbar-thumb-hover-background-color: #7a7a7a;
  --ifm-table-stripe-background: hsla(0, 0%, 100%, 0.07);
  --ifm-color-primary-contrast-background: #102445;
  --ifm-color-primary-contrast-foreground: #ebf2fc;
  --ifm-color-secondary-contrast-background: #474748;
  --ifm-color-secondary-contrast-foreground: #fdfdfe;
  --ifm-color-success-contrast-background: #003100;
  --ifm-color-success-contrast-foreground: #e6f6e6;
  --ifm-color-info-contrast-background: #193c47;
  --ifm-color-info-contrast-foreground: #eef9fd;
  --ifm-color-warning-contrast-background: #4d3800;
  --ifm-color-warning-contrast-foreground: #fff8e6;
  --ifm-color-danger-contrast-background: #4b1113;
  --ifm-color-danger-contrast-foreground: #ffebec;

  --ifm-color-primary: hsl(295, 52%, 55%);
  --ifm-color-primary-dark: hsl(295, 52%, 51%);
  --ifm-color-primary-darker: hsl(295, 52%, 48%);
  --ifm-color-primary-darkest: hsl(295, 52%, 42%);
  --ifm-color-primary-light: hsl(295, 52%, 60%);
  --ifm-color-primary-lighter: hsl(295, 52%, 62%);
  --ifm-color-primary-lightest: hsl(295, 52%, 69%);

  --bg1: hsl(249, 30%, 3%);
  --bg1-alpha50: hsla(249, 30%, 3%, 0.5);
  --bg1-alpha75: hsla(249, 30%, 3%, 0.75);
  --bg2: hsl(249, 35%, 16%);
  --code-bg: #000000;

  --fg1: hsl(0, 0%, 100%);
  --fg2: hsl(0, 0%, 60%);

  --link: hsl(202, 100%, 57%);
  --cyan: hsl(249, 70%, 57%);
  --cyan-h: 249;
  --cyan-s: 70%;
  --cyan-l: 57%;
  --pink: hsl(295, 62%, 66%);
  --pink-h: 295;
  --pink-s: 62%;
  --pink-l: 66%;

  --ifm-alert-border-color: hsl(249, 70%, 57%);
  --ifm-alert-background-color: hsl(249, 70%, 57%);

  --purple-navy: hsla(251, 19%, 39%, 1);
  --black-coffee: hsla(330, 6%, 20%, 1);
  --ifm-toc-border-color: hsla(330, 6%, 75%, 0.1);
}

html,
body {
  padding: 0;
  margin: 0;
  background-color: var(--bg1);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  color: var(--fg1);
}

html {
  color-scheme: light dark;
  scroll-padding-top: 4rem;
}

html:not([data-theme='dark']) {
  color-scheme: light;
}

html[data-theme='dark'] {
  color-scheme: dark;
}

* {
  box-sizing: border-box;
}

article .theme-doc-markdown.markdown {
  padding-inline: 1rem;
}

.aa-DetachedSearchButton {
  border: 1px solid rgba(128, 126, 163, 0.8);
}

.aa-FooterSearchCredit {
  font-size: 0.5rem;
}
.aa-FooterSearchCredit span {
  font-size: 0.65rem;
  color: var(--fg1);
  opacity: 0.5;
}

.aa-DetachedSearchButton {
  --key-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff,
    0 1px 2px 1px rgba(30, 35, 90, 0.4);
  --key-gradient: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
}

html[data-theme='dark'] .aa-DetachedSearchButton {
  --key-shadow: inset 0 -2px 0 0 #282d55, inset 0 0 1px 1px #51577d,
    0 2px 2px 0 rgba(3, 4, 9, 0.3);
  --key-gradient: linear-gradient(-26.5deg, #565872, #31355b);
}

.footer .container {
  max-width: 960px;
}

.navbar-github-link:after {
  transition: opacity 0.2s;
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: center;
}

.navbar-github-link:hover:after {
  opacity: 0.5;
}

html[data-theme='dark'] .navbar-github-link:after {
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E");
}

.navbar--fixed-top {
  view-transition-name: navbar;
}

